[metadata]
name = chocolatine
version = 0.89.8
author = Pierre-Emmanuel Brian
author_email = pebrian@outlook.fr
description = Dynamic generation of SQL queries
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pe-brian/chocolatine
project_urls =
    Bug Tracker = https://github.com/pe-brian/chocolatine/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.12.2
install_requires =
    typeguard == 4.3.0
    choc-expr == 1.3.5