[metadata]
name = chocolatine
version = 1.1.0
author = Pierre-Emmanuel Brian
author_email = pebrian@outlook.fr
description = Dynamic generation of SQL queries
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pe-brian/chocolatine
project_urls =
    Bug Tracker = https://github.com/pe-brian/chocolatine/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.13
install_requires =
    typeguard == 4.5.1
    choc-expr == 1.3.7